misc. updates